fix: update styles and theme colors for improved consistency and readability

--- a/src/styles/custom/prosa.css
+++ b/src/styles/custom/prosa.css
@@ -1,6 +1,7 @@
 @layer prosa {
   :root {
     --headline-scale: pow(1.5, 0.2);
+    --border-width: 0.5px;
   }
 }
 
@@ -16,11 +17,10 @@
   @scope (&) to (.not-prosa) {
     a {
       color: var(--color-accent);
-
-      &:hover,
-      &:focus {
-        text-decoration: underline;
-      }
+      text-decoration: underline;
+      text-decoration-thickness: var(--border-width);
+      text-underline-offset: 0.1875rem;
+      text-decoration-color: var(--color-foreground-subtle);
 
       &[data-footnote-ref] {
         background: var(--color-background-subtle);
@@ -41,8 +41,8 @@
 
     blockquote {
       font-style: italic;
-      border-left: 1px solid var(--color-accent);
-      padding-left: calc(1.5rem - 1px);
+      border-left: var(--border-width) solid var(--color-accent);
+      padding-left: calc(1.5rem - var(--border-width));
     }
 
     code {
@@ -56,7 +56,7 @@
       padding: 0.1875rem 0.375rem;
 
       @media print {
-        border: 1px solid var(--color-border);
+        border: var(--border-width) solid var(--color-border);
       }
     }
 
@@ -192,7 +192,7 @@
       appearance: none;
       background-color: var(--color-background-subtle);
       border-radius: var(--radius-default);
-      border: 1px solid var(--color-border);
+      border: var(--border-width) solid var(--color-border);
       color: var(--color-background);
       height: 1rem;
       left: -1.25rem;
@@ -220,7 +220,7 @@
       padding: 0.75rem;
 
       @media print {
-        border: 1px solid var(--color-border);
+        border: var(--border-width) solid var(--color-border);
         white-space: pre-wrap;
       }
     }
@@ -232,7 +232,7 @@
 
     table {
       border-radius: var(--radius-default);
-      border: 1px solid var(--color-border);
+      border: var(--border-width) solid var(--color-border);
       table-layout: fixed;
       width: 100%;
       border-collapse: separate;
@@ -248,7 +248,7 @@
 
     th:not(:first-child),
     td:not(:first-child) {
-      border-left: 1px solid var(--color-border);
+      border-left: var(--border-width) solid var(--color-border);
     }
 
     th {
@@ -257,7 +257,7 @@
     }
 
     td {
-      border-top: 1px solid var(--color-border);
+      border-top: var(--border-width) solid var(--color-border);
     }
 
     time {
