--- a/src/styles/tailwind/theme.css
+++ b/src/styles/tailwind/theme.css
@@ -1,13 +1,13 @@
 @theme static {
-  --color-accent: light-dark(#8839ef, #cba6f7);
+  --color-accent: light-dark(var(--color-stone-950), var(--color-stone-50));
 
-  --color-background-subtle: light-dark(#e6e9ef, #313244);
-  --color-background: light-dark(#eff1f5, #1e1e2e);
+  --color-background-subtle: light-dark(var(--color-stone-100), var(--color-stone-800));
+  --color-background: light-dark(var(--color-stone-50), var(--color-stone-900));
 
-  --color-border: light-dark(#bcc0cc, #45475a);
+  --color-border: light-dark(var(--color-stone-300), var(--color-stone-700));
 
-  --color-foreground-subtle: light-dark(#6c6f85, #a6adc8);
-  --color-foreground: light-dark(#4c4f69, #cdd6f4);
+  --color-foreground-subtle: light-dark(var(--color-stone-600), var(--color-stone-400));
+  --color-foreground: light-dark(var(--color-stone-950), var(--color-stone-50));
 
   --font-default: ui-sans-serif, system-ui, sans-serif;
   --font-mono: ui-monospace, monospace;
